--- a/task-08/index.html
+++ b/task-08/index.html
@@ -15,7 +15,7 @@
               <div class="col-2">
                 <h1>skilled</h1>
               </div>
-              <div class="col-6">
+              <div class="col-6 emptyd">
               </div>
               <div class="col">
                 <button>Get Started</button>
@@ -27,20 +27,21 @@
         <section class="hero">
             <div class="container">
                 <div class="row">
-                  <div class="col content">
+                  <div class="col-12 content">
                     <h2>Maximize skill, minimize budget</h2>
                     <p>Our modern courses across a range of in demand skills will give you the knowledge you need to live the life you want</p>
                     <button>Get Started</button>
                   </div>
                   <div class="col picture">
                     <img src="img/Group 19.png" >
+                    <img src="img/Group 9.png" >
                   </div>
                 </div>
             </div>    
         </section>
         <section class="main">
           <div class="container">
-            <div class="row yuxari">
+            <div class="row cards">
               <div class="col ilk">
                 <h2>Check out our most popular courses!</h2>
               </div>
@@ -61,9 +62,7 @@
                 <a href="#">Get Started</a>
               </div>
             </div>
-          </div>
-          <div class="container">
-            <div class="row asagi">
+            <div class="row cards">
               <div class="col diger">
                 <div class="imglogo">
                   <img src="img/Group 17.png">
