updated food site

--- a/task-23/index.html
+++ b/task-23/index.html
@@ -10,120 +10,193 @@
 </head>
 
 <body>
-    <div class="container">
-        <!--  navbar start -->
-        <div class="navbar">
-            <h3>The Kitchen</h3>
-            <img src="./assets/menu.png" class="icon">
-        </div>
-        <div class="line"></div>
-        <div class="top-photos">
-            <img src="./assets/main.png">
-            <p id="percentage">50%</p>
-            <p id="text">off fish</p>
-            <button>SEE MORE</button>
-        </div>
-        <div class="line"></div>
-        <!-- wrapper menu start -->
-        <div class="wrapper">
-            <div class="food">
-                <img src="./assets/all-food.png" alt="">
-                <p>All</p>
+    <div class="container2x">
+        <div class="container" id="mainpage">
+            <!--  navbar start -->
+            <div class="navbar">
+                <h3>The Kitchen</h3>
+                <img src="./assets/menu.png" class="icon" id="drpbtn">
             </div>
-            <div class="food">
-                <div class="photo">
-                    <img src="./assets/breakfast.jpeg">
+            <div class="line"></div>
+            <div class="top-photos">
+                <img src="./assets/main.png">
+                <p id="percentage">50%</p>
+                <p id="text">off fish</p>
+                <button>SEE MORE</button>
+            </div>
+            <div class="line"></div>
+            <!-- wrapper menu start -->
+            <div class="wrapper">
+                <div class="food">
+                    <img src="./assets/all-food.png" alt="">
+                    <p>All</p>
                 </div>
-                <p>Breakfast</p>
-            </div>
-            <div class="food">
-                <div class="photo">
-                    <img src="./assets/lunchh.webp">
+                <div class="food">
+                    <div class="photo">
+                        <img src="./assets/breakfast.jpeg">
+                    </div>
+                    <p>Breakfast</p>
                 </div>
-                <p>Lunch</p>
-            </div>
-            <div class="food">
-                <div class="photo">
-                    <img src="./assets/soup.jpeg">
+                <div class="food">
+                    <div class="photo">
+                        <img src="./assets/lunchh.webp">
+                    </div>
+                    <p>Lunch</p>
                 </div>
-                <p>Soup</p>
-            </div>
-            <div class="food">
-                <div class="photo">
-                    <img src="./assets/salad.webp">
+                <div class="food">
+                    <div class="photo">
+                        <img src="./assets/soup.jpeg">
+                    </div>
+                    <p>Soup</p>
                 </div>
-                <p>Salad</p>
-            </div>
-            <div class="food">
-                <div class="photo">
-                    <img src="./assets/pasta.jpeg">
+                <div class="food">
+                    <div class="photo">
+                        <img src="./assets/salad.webp">
+                    </div>
+                    <p>Salad</p>
                 </div>
-                <p>Pasta</p>
-            </div>
-            <div class="food">
-                <div class="photo">
-                    <img src="./assets/kids-menu.jpeg">
+                <div class="food">
+                    <div class="photo">
+                        <img src="./assets/pasta.jpeg">
+                    </div>
+                    <p>Pasta</p>
                 </div>
-                <p>Kids menu</p>
-            </div>
-            <div class="food">
-                <div class="photo">
-                    <img src="./assets/snacks.webp">
+                <div class="food">
+                    <div class="photo">
+                        <img src="./assets/kids-menu.jpeg">
+                    </div>
+                    <p>Kids menu</p>
                 </div>
-                <p>Snacks</p>
-            </div>
-            <div class="food">
-                <div class="photo">
-                    <img src="./assets/desserts.webp">
+                <div class="food">
+                    <div class="photo">
+                        <img src="./assets/snacks.webp">
+                    </div>
+                    <p>Snacks</p>
                 </div>
-                <p>Desserts</p>
-            </div>
-            <div class="food">
-                <div class="photo">
-                    <img src="./assets/beverages.webp">
+                <div class="food">
+                    <div class="photo">
+                        <img src="./assets/desserts.webp">
+                    </div>
+                    <p>Desserts</p>
                 </div>
-                <p>Beverages</p>
-            </div>
-        </div>
-        <div class="line"></div>
-        <!-- middle start -->
-        <div class="middle">
-            <div class="text">
-                <p>LUNCH</p>
-            </div>
-            <div class="vertical"></div>
-            <div class="content">
-                <div class="photo">
-                    <img src="./assets/salad.webp">
+                <div class="food">
+                    <div class="photo">
+                        <img src="./assets/beverages.webp">
+                    </div>
+                    <p>Beverages</p>
                 </div>
+            </div>
+            <div class="line"></div>
+            <!-- middle start -->
+            <div class="middle">
                 <div class="text">
-                    <h1>Lunch Menu</h1>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias iste iusto, alias perferendis
-                        placeat dolor quam velit repellendus odit atque impedit id nostrum in quidem quas eum sint
-                        corrupti ad.</p>
+                    <p>LUNCH</p>
+                </div>
+                <div class="vertical"></div>
+                <div class="content">
+                    <div class="photo">
+                        <img src="./assets/salad.webp">
+                    </div>
+                    <div class="text">
+                        <h1>Lunch Menu</h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias iste iusto, alias
+                            perferendis
+                            placeat dolor quam velit repellendus odit atque impedit id nostrum in quidem quas eum sint
+                            corrupti ad.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- bottom bar start -->
+            <div class="bottom-bar">
+                <div class="item">
+                    <img src="./assets/menu-icon.png">
+                    <p>menu</p>
+                </div>
+                <div class="item">
+                    <img src="./assets/shopping-cart.png">
+                    <p>cart</p>
+                </div>
+                <div class="item">
+                    <img src="./assets/user.png">
+                    <p>person</p>
+                </div>
+                <div class="item">
+                    <img src="./assets/heart.png">
+                    <p>favorite</p>
                 </div>
             </div>
         </div>
-        <!-- bottom bar start -->
-        <div class="bottom-bar">
-            <div class="item">
-                <img src="./assets/menu-icon.png">
-                <p>menu</p>
+
+        <!-- order page start -->
+
+        <div class="container dropdown" id="dropdown">
+            <img  src="./assets/cancel.png" id="button">
+            <div class="order">
+                <img id="orderimg" src="./assets/order.jpeg">
             </div>
-            <div class="item">
-                <img src="./assets/shopping-cart.png">
-                <p>cart</p>
-            </div>
-            <div class="item">
-                <img src="./assets/user.png">
-                <p>person</p>
-            </div>
-            <div class="item">
+            <div class="content">
+                <div class="blur">
+                    <p id="bold">Cake with almond</p>
+                </div>
+                <p>Rice flour, eggs, almond, sugar,</p>
+                <p>caramel, oil, cheese</p>
+                <p id="weight">The weight <span>180g</span> </p>
                 <img src="./assets/heart.png">
-                <p>favorite</p>
+            </div>
+            <div class="line"></div>
+            <div class="composition">
+                <div>
+                    <p page>Cal</p>
+                    <p id="number">230</p>
+                </div>
+                <div>
+                    <p id="main">Carbs</p>
+                    <p id="number">28 g</p>
+                </div>
+                <div>
+                    <p id="main">Fat</p>
+                    <p id="number">8 g</p>
+                </div>
+                <div>
+                    <p id="main">Protein</p>
+                    <p id="number">14 g</p>
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="meal">
+                <div>
+                    <h3>ADD TO A MEAL:</h3>
+                </div>
+                <div class="middle">
+                    <div class="left">
+                        <p>Topping</p>
+                        <p>Coffee</p>
+                    </div>
+                    <div class="right">
+                        <div>
+                            <label for="checkbox">$ 1.25</label>
+                            <input type="checkbox" id="checkbox">
+                        </div>
+                        <div>
+                            <label for="chckbx">$ 1.05</label>
+                            <input type="checkbox" id="chckbx">
+                        </div>
+                    </div>
+                </div>
+                <div class="amount">
+                    <p>$ 9,0</p>
+                </div>
+                <div class="cart">
+                    <img src="./assets/minus-sign.png">
+                    <label>1</label>
+                    <img src="./assets/plus.png">
+                    <button>ADD TO CART</button>
+                </div>
             </div>
         </div>
     </div>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
