--- a/task-24-js-finaltask/index.html
+++ b/task-24-js-finaltask/index.html
@@ -115,7 +115,7 @@
                                 </div>
                             </div>
                             <div class="right">
-                                <a href="#" id="roadmapbtn">View</a>
+                                <a href="#" id="mobile-roadmapbtn">View</a>
                                 <div class="flex">
                                     <label>2</label>
                                     <label>3</label>
@@ -338,9 +338,9 @@
         <!-- feed nav end -->
 
         <!-- feedback start -->
-        <div class="cards">
+        <div class="cards" id="comment-card">
             <div class="main">
-                <button>
+                <button id="leftbtn">
                     <svg width="11" height="7" viewBox="0 0 11 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1.33447 6L5.33447 2L9.33447 6" stroke="#4661E6" stroke-width="2" />
                     </svg>
@@ -357,7 +357,7 @@
                             d="M2.62074 16H1.34534L2.24718 15.0895C2.73344 14.5986 3.0371 13.9601 3.11873 13.2674C1.03637 11.8878 0 9.88917 0 7.79388C0 3.92832 3.51913 0 9.0305 0C14.8692 0 18 3.61479 18 7.45522C18 11.321 14.8361 14.9333 9.0305 14.9333C8.0135 14.9333 6.95226 14.7963 6.00478 14.5448C5.10787 15.4735 3.89262 16 2.62074 16Z"
                             fill="#CDD2EE" />
                     </svg>
-                    <!-- <span>2</span> -->
+                    <p>2</p>
                 </button>
             </div>
         </div>
@@ -549,50 +549,50 @@
                             fill="white" />
                     </svg>
                 </div>
-                <h2>Editing 'Add a dark theme option'</h3>
-                    <div class="inputs">
-                        <div class="input">
-                            <h4>Feedback Title</h4>
-                            <p>Add a short, descriptive headline</p>
-                            <input type="text" id="title" placeholder="Please add a dark theme option">
-                        </div>
-                        <div class="input">
-                            <h4>Category</h4>
-                            <p>Choose a category for your feedback</p>
-                            <select name="options" id="options">
-                                <option value="Feature">Feature</option>
-                                <option value="UI">UI</option>
-                                <option value="UX">UX</option>
-                                <option value="Enhancement">Enhancement</option>
-                                <option value="Bug">Bug</option>
-                            </select>
-                        </div>
-                        <div class="input">
-                            <h4>Update Status</h4>
-                            <p>Change Feature State</p>
-                            <select name="options" id="options">
-                                <option value="Suggestion">Suggestion</option>
-                                <option value="Planned" selected>Planned</option>
-                                <option value="In-Proggres">In-Proggres</option>
-                                <option value="Live">Live</option>
-                            </select>
-                        </div>
-                        <div class="input">
-                            <h4>Feedback Detail</h4>
-                            <p>Include any specific comments on what should be improved, added, etc.</p>
-                            <input type="text" id="detail"
-                                placeholder="It would elp people with light sensitivities and who prefer darkmode.">
-                        </div>
+                <h2>Editing 'Add a dark theme option'</h2>
+                <div class="inputs">
+                    <div class="input">
+                        <h4>Feedback Title</h4>
+                        <p>Add a short, descriptive headline</p>
+                        <input type="text" id="title" placeholder="Please add a dark theme option">
                     </div>
-                    <div class="btns">
-                        <div class="left">
-                            <button id="delete">Delete</button>
-                        </div>
-                        <div class="right">
-                            <button id="editfirstbtn">Cancel</button>
-                            <button id="secondbtn">Save Changes</button>
-                        </div>
+                    <div class="input">
+                        <h4>Category</h4>
+                        <p>Choose a category for your feedback</p>
+                        <select name="options" id="options">
+                            <option value="Feature">Feature</option>
+                            <option value="UI">UI</option>
+                            <option value="UX">UX</option>
+                            <option value="Enhancement">Enhancement</option>
+                            <option value="Bug">Bug</option>
+                        </select>
                     </div>
+                    <div class="input">
+                        <h4>Update Status</h4>
+                        <p>Change Feature State</p>
+                        <select name="options" id="options">
+                            <option value="Suggestion">Suggestion</option>
+                            <option value="Planned" selected>Planned</option>
+                            <option value="In-Proggres">In-Proggres</option>
+                            <option value="Live">Live</option>
+                        </select>
+                    </div>
+                    <div class="input">
+                        <h4>Feedback Detail</h4>
+                        <p>Include any specific comments on what should be improved, added, etc.</p>
+                        <input type="text" id="detail"
+                            placeholder="It would elp people with light sensitivities and who prefer darkmode.">
+                    </div>
+                </div>
+                <div class="btns">
+                    <div class="left">
+                        <button id="delete">Delete</button>
+                    </div>
+                    <div class="right">
+                        <button id="editfirstbtn">Cancel</button>
+                        <button id="secondbtn">Save Changes</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -786,6 +786,218 @@
                 </div>
             </div>
             <div class="conditions">
+                <div class="title-live">
+                    <h4>Live (1)</h4>
+                    <p>Ideaz prioritized for research</p>
+                </div>
+                <div class="card-live">
+                    <div class="main">
+                        <div class="condition">
+                            <div class="circle"></div>
+                            <p>Live</p>
+                        </div>
+                        <h4>More Comprehensive report</h4>
+                        <p>It would be great to see a more detailed breakdown of solutions.</p>
+                        <button>Feature</button>
+                        <div class="bottom">
+                            <button>
+                                <svg width="11" height="7" viewBox="0 0 11 7" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.33447 6L5.33447 2L9.33447 6" stroke="#4661E6" stroke-width="2" />
+                                </svg>
+                                123
+                            </button>
+                            <div class="button">
+                                <button>
+                                    <svg width="18" height="16" viewBox="0 0 18 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M2.62074 16H1.34534L2.24718 15.0895C2.73344 14.5986 3.0371 13.9601 3.11873 13.2674C1.03637 11.8878 0 9.88917 0 7.79388C0 3.92832 3.51913 0 9.0305 0C14.8692 0 18 3.61479 18 7.45522C18 11.321 14.8361 14.9333 9.0305 14.9333C8.0135 14.9333 6.95226 14.7963 6.00478 14.5448C5.10787 15.4735 3.89262 16 2.62074 16Z"
+                                            fill="#CDD2EE" />
+                                    </svg>
+                                </button>
+                                <p>2</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mobile-work">
+            <div class="focused-elements">
+                <button id="nav-planned">Planned (<span>2</span>)</button>
+                <button id="nav-in-progress">In-Progress (<span>3</span>)</button>
+                <button id="nav-live">Live (<span>1</span>)</button>
+            </div>
+            <hr>
+            <div class="conditions" id="planned-page">
+                <div class="title-planned">
+                    <h4>Planned (2)</h4>
+                    <p>Ideaz prioritized for research</p>
+                </div>
+                <div class="card">
+                    <div class="main">
+                        <div class="condition">
+                            <div class="circle"></div>
+                            <p>Planned</p>
+                        </div>
+                        <h4>More Comprehensive report</h4>
+                        <p>It would be great to see a more detailed breakdown of solutions.</p>
+                        <button>Feature</button>
+                        <div class="bottom">
+                            <button>
+                                <svg width="11" height="7" viewBox="0 0 11 7" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.33447 6L5.33447 2L9.33447 6" stroke="#4661E6" stroke-width="2" />
+                                </svg>
+                                123
+                            </button>
+                            <div class="button">
+                                <button>
+                                    <svg width="18" height="16" viewBox="0 0 18 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M2.62074 16H1.34534L2.24718 15.0895C2.73344 14.5986 3.0371 13.9601 3.11873 13.2674C1.03637 11.8878 0 9.88917 0 7.79388C0 3.92832 3.51913 0 9.0305 0C14.8692 0 18 3.61479 18 7.45522C18 11.321 14.8361 14.9333 9.0305 14.9333C8.0135 14.9333 6.95226 14.7963 6.00478 14.5448C5.10787 15.4735 3.89262 16 2.62074 16Z"
+                                            fill="#CDD2EE" />
+                                    </svg>
+                                </button>
+                                <p>2</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="main">
+                        <div class="condition">
+                            <div class="circle"></div>
+                            <p>Planned</p>
+                        </div>
+                        <h4>More Comprehensive report</h4>
+                        <p>It would be great to see a more detailed breakdown of solutions.</p>
+                        <button>Feature</button>
+                        <div class="bottom">
+                            <button>
+                                <svg width="11" height="7" viewBox="0 0 11 7" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.33447 6L5.33447 2L9.33447 6" stroke="#4661E6" stroke-width="2" />
+                                </svg>
+                                123
+                            </button>
+                            <div class="button">
+                                <button>
+                                    <svg width="18" height="16" viewBox="0 0 18 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M2.62074 16H1.34534L2.24718 15.0895C2.73344 14.5986 3.0371 13.9601 3.11873 13.2674C1.03637 11.8878 0 9.88917 0 7.79388C0 3.92832 3.51913 0 9.0305 0C14.8692 0 18 3.61479 18 7.45522C18 11.321 14.8361 14.9333 9.0305 14.9333C8.0135 14.9333 6.95226 14.7963 6.00478 14.5448C5.10787 15.4735 3.89262 16 2.62074 16Z"
+                                            fill="#CDD2EE" />
+                                    </svg>
+                                </button>
+                                <p>2</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="conditions" id="in-progress-page">
+                <div class="title-in-progress">
+                    <h4>In Progress (3)</h4>
+                    <p>Ideaz prioritized for research</p>
+                </div>
+                <div class="card-in-progress">
+                    <div class="main">
+                        <div class="condition">
+                            <div class="circle"></div>
+                            <p>In Progress</p>
+                        </div>
+                        <h4>Bookmark Challanges</h4>
+                        <p>Be able to bookmark challanges to take later on.</p>
+                        <button>Feature</button>
+                        <div class="bottom">
+                            <button>
+                                <svg width="11" height="7" viewBox="0 0 11 7" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.33447 6L5.33447 2L9.33447 6" stroke="#4661E6" stroke-width="2" />
+                                </svg>
+                                123
+                            </button>
+                            <div class="button">
+                                <button>
+                                    <svg width="18" height="16" viewBox="0 0 18 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M2.62074 16H1.34534L2.24718 15.0895C2.73344 14.5986 3.0371 13.9601 3.11873 13.2674C1.03637 11.8878 0 9.88917 0 7.79388C0 3.92832 3.51913 0 9.0305 0C14.8692 0 18 3.61479 18 7.45522C18 11.321 14.8361 14.9333 9.0305 14.9333C8.0135 14.9333 6.95226 14.7963 6.00478 14.5448C5.10787 15.4735 3.89262 16 2.62074 16Z"
+                                            fill="#CDD2EE" />
+                                    </svg>
+                                </button>
+                                <p>2</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-in-progress">
+                    <div class="main">
+                        <div class="condition">
+                            <div class="circle"></div>
+                            <p>In Progress</p>
+                        </div>
+                        <h4>Bookmark Challanges</h4>
+                        <p>Be able to bookmark challanges to take later on.</p>
+                        <button>Feature</button>
+                        <div class="bottom">
+                            <button>
+                                <svg width="11" height="7" viewBox="0 0 11 7" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.33447 6L5.33447 2L9.33447 6" stroke="#4661E6" stroke-width="2" />
+                                </svg>
+                                123
+                            </button>
+                            <div class="button">
+                                <button>
+                                    <svg width="18" height="16" viewBox="0 0 18 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M2.62074 16H1.34534L2.24718 15.0895C2.73344 14.5986 3.0371 13.9601 3.11873 13.2674C1.03637 11.8878 0 9.88917 0 7.79388C0 3.92832 3.51913 0 9.0305 0C14.8692 0 18 3.61479 18 7.45522C18 11.321 14.8361 14.9333 9.0305 14.9333C8.0135 14.9333 6.95226 14.7963 6.00478 14.5448C5.10787 15.4735 3.89262 16 2.62074 16Z"
+                                            fill="#CDD2EE" />
+                                    </svg>
+                                </button>
+                                <p>2</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-in-progress">
+                    <div class="main">
+                        <div class="condition">
+                            <div class="circle"></div>
+                            <p>In Progress</p>
+                        </div>
+                        <h4>Bookmark Challanges</h4>
+                        <p>Be able to bookmark challanges to take later on.</p>
+                        <button>Feature</button>
+                        <div class="bottom">
+                            <button>
+                                <svg width="11" height="7" viewBox="0 0 11 7" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.33447 6L5.33447 2L9.33447 6" stroke="#4661E6" stroke-width="2" />
+                                </svg>
+                                123
+                            </button>
+                            <div class="button">
+                                <button>
+                                    <svg width="18" height="16" viewBox="0 0 18 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M2.62074 16H1.34534L2.24718 15.0895C2.73344 14.5986 3.0371 13.9601 3.11873 13.2674C1.03637 11.8878 0 9.88917 0 7.79388C0 3.92832 3.51913 0 9.0305 0C14.8692 0 18 3.61479 18 7.45522C18 11.321 14.8361 14.9333 9.0305 14.9333C8.0135 14.9333 6.95226 14.7963 6.00478 14.5448C5.10787 15.4735 3.89262 16 2.62074 16Z"
+                                            fill="#CDD2EE" />
+                                    </svg>
+                                </button>
+                                <p>2</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="conditions" id="live-page">
                 <div class="title-live">
                     <h4>Live (1)</h4>
                     <p>Ideaz prioritized for research</p>
