--- a/task-24-js-finaltask/index.html
+++ b/task-24-js-finaltask/index.html
@@ -184,7 +184,7 @@
                                     fill="#CDD2EE" />
                             </svg>
                         </button>
-                        <p>2</p>
+                        <p class="count">3</p>
                     </div>
                 </div>
                 <div class="cards">
@@ -209,7 +209,7 @@
                                     fill="#CDD2EE" />
                             </svg>
                         </button>
-                        <p>2</p>
+                        <p class="count">2</p>
                     </div>
                 </div>
                 <div class="cards">
@@ -234,7 +234,7 @@
                                     fill="#CDD2EE" />
                             </svg>
                         </button>
-                        <p>2</p>
+                        <p class="count">5</p>
                     </div>
                 </div>
                 <div class="cards">
@@ -259,7 +259,7 @@
                                     fill="#CDD2EE" />
                             </svg>
                         </button>
-                        <p>2</p>
+                        <p class="count">1</p>
                     </div>
                 </div>
                 <div class="cards">
@@ -284,7 +284,7 @@
                                     fill="#CDD2EE" />
                             </svg>
                         </button>
-                        <p>2</p>
+                        <p class="count">7</p>
                     </div>
                 </div>
                 <div class="cards">
@@ -309,7 +309,7 @@
                                     fill="#CDD2EE" />
                             </svg>
                         </button>
-                        <p>2</p>
+                        <p class="count">0</p>
                     </div>
                 </div>
             </div>
