sorting added js project

--- a/task-24-js-finaltask/index.html
+++ b/task-24-js-finaltask/index.html
@@ -149,13 +149,13 @@
 
                 <!-- dropdown menu  -->
                 <div class="dropdown-menu" id="dropdown-menu">
-                    <p>Most Upvotes</p>
+                    <p id="mostUpvotes">Most Upvotes</p>
                     <hr>
-                    <p>Least Upvotes</p>
+                    <p id="leastUpvotes">Least Upvotes</p>
                     <hr>
-                    <p>Most Comments</p>
+                    <p id="mostComments">Most Comments</p>
                     <hr>
-                    <p>Least Comments</p>
+                    <p id="leastComments">Least Comments</p>
                 </div>
             </div>
 
@@ -169,7 +169,7 @@
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1.33447 6L5.33447 2L9.33447 6" stroke="#4661E6" stroke-width="2" />
                             </svg>
-                            <p>112</p>
+                            <p class="upvotes">112</p>
                         </button>
                         <div class="middle">
                             <h3>Add tags for solutions</h3>
@@ -194,7 +194,7 @@
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1.33447 6L5.33447 2L9.33447 6" stroke="#4661E6" stroke-width="2" />
                             </svg>
-                            <p>112</p>
+                            <p class="upvotes">112</p>
                         </button>
                         <div class="middle">
                             <h3>Add tags for solutions</h3>
@@ -219,7 +219,7 @@
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1.33447 6L5.33447 2L9.33447 6" stroke="#4661E6" stroke-width="2" />
                             </svg>
-                            <p>112</p>
+                            <p class="upvotes">112</p>
                         </button>
                         <div class="middle">
                             <h3>Add tags for solutions</h3>
@@ -244,7 +244,7 @@
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1.33447 6L5.33447 2L9.33447 6" stroke="#4661E6" stroke-width="2" />
                             </svg>
-                            <p>112</p>
+                            <p class="upvotes">112</p>
                         </button>
                         <div class="middle">
                             <h3>Add tags for solutions</h3>
@@ -269,7 +269,7 @@
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1.33447 6L5.33447 2L9.33447 6" stroke="#4661E6" stroke-width="2" />
                             </svg>
-                            <p>112</p>
+                            <p class="upvotes">112</p>
                         </button>
                         <div class="middle">
                             <h3>Add tags for solutions</h3>
@@ -294,7 +294,7 @@
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1.33447 6L5.33447 2L9.33447 6" stroke="#4661E6" stroke-width="2" />
                             </svg>
-                            <p>112</p>
+                            <p class="upvotes">112</p>
                         </button>
                         <div class="middle">
                             <h3>Add tags for solutions</h3>
@@ -344,7 +344,7 @@
                     <svg width="11" height="7" viewBox="0 0 11 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1.33447 6L5.33447 2L9.33447 6" stroke="#4661E6" stroke-width="2" />
                     </svg>
-                    <p>112</p>
+                    <p class="upvotes">112</p>
                 </button>
                 <div class="middle">
                     <h3>Add tags for solutions</h3>
